feat: added validation to signup&login
