# core/handlers/auth/auth.go
@@ -2,19 +2,31 @@ package auth
 
 import (
 	"context"
+	"errors"
 	"fmt"
-	"log"
 	"net/http"
 
 	"github.com/adeyemialameen04/unwind-be/core/server"
 	"github.com/adeyemialameen04/unwind-be/internal/db/repository"
+	"github.com/adeyemialameen04/unwind-be/internal/utils"
 	"github.com/gin-gonic/gin"
 	"github.com/golodash/galidator"
+	"github.com/jackc/pgx/v5/pgconn"
 )
 
-type AuthRequest struct {
-	Email    string `json:"email" binding:"required,email"`
-	Password string `json:"password"  binding:"required"`
+type RegisterResponse struct {
+	AccessToken  string      `json:"accessToken"`
+	RefreshToken string      `json:"refreshToken"`
+	User         UserDetails `json:"user"`
+}
+
+const (
+	UniqueViolation = "23505"
+)
+
+type UserDetails struct {
+	Email string `json:"email"`
+	ID    string `json:"id"`
 }
 
 type Handler struct {
@@ -31,7 +43,7 @@ func NewAuthHandler(srv *server.Server) *Handler {
 // @Tags         Auth
 // @Accept       json
 // @Produce      json
-// @Param        book  body      AuthRequest  true  "Login data"
+// @Param        book  body      repository.RegisterUserParams  true  "Login data"
 // @Failure      400   {object}  map[string]string            "Invalid request data"
 // @Failure      500   {object}  map[string]string            "Failed to start transaction or insert book"
 // @Router       /auth/login [post]
@@ -39,9 +51,9 @@ func (h *Handler) LoginUser(c *gin.Context) {
 	g := galidator.New().CustomMessages(galidator.Messages{
 		"required": "$field is required",
 	})
-	customizer := g.Validator(AuthRequest{})
+	customizer := g.Validator(repository.RegisterUserParams{})
 
-	var req AuthRequest
+	var req repository.RegisterUserParams
 	if err := c.ShouldBindJSON(&req); err != nil {
 		fmt.Println(err)
 		server.SendValidationError(c, customizer.DecryptErrors(err))
@@ -52,12 +64,13 @@ func (h *Handler) LoginUser(c *gin.Context) {
 }
 
 // Signup godoc
-// @Summary      Login to your account
-// @Description  Logs a user into his/her account
+// @Summary      Create an account
+// @Description  Create an account on unwind
 // @Tags         Auth
 // @Accept       json
 // @Produce      json
-// @Param        book  body      repository.RegisterUserParams  true  "Login data"
+// @Param        book  body      repository.RegisterUserParams  true  "Signup data"
+// @Success      201   {object}  server.Response{data=RegisterResponse} "User created successfully"
 // @Failure      400   {object}  map[string]string            "Invalid request data"
 // @Failure      500   {object}  map[string]string            "Failed to start transaction or insert book"
 // @Router       /auth/signup [post]
@@ -75,20 +88,31 @@ func (h *Handler) RegisterUser(c *gin.Context) {
 		return
 	}
 
-	// Start a transaction
 	tx, err := h.srv.DB.Begin(ctx)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to start transaction"})
+		server.SendInternalServerError(c, err)
 		return
 	}
 	defer tx.Rollback(ctx)
 
-	// Insert book using the repository
-	repo := repository.New(tx)
-	user, err := repo.RegisterUser(ctx, req)
+	hashed_password, err := utils.HashPassword(req.Password)
 	if err != nil {
-		log.Fatal(err)
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to insert book"})
+		fmt.Println(err)
+		return
+	}
+	repo := repository.New(tx)
+	user, err := repo.RegisterUser(ctx, repository.RegisterUserParams{
+		Email:    req.Email,
+		Password: hashed_password,
+	})
+	if err != nil {
+		var pgErr *pgconn.PgError
+		if errors.As(err, &pgErr) && pgErr.Code == UniqueViolation {
+			server.SendConflict(c, err)
+			return
+		}
+
+		server.SendInternalServerError(c, err)
 		return
 	}
 
@@ -98,5 +122,37 @@ func (h *Handler) RegisterUser(c *gin.Context) {
 		return
 	}
 
-	server.SendSuccess(c, "got it", user)
+	tokens, err := h.generateTokens(user.ID.String())
+	response := RegisterResponse{
+		AccessToken:  tokens.AccessToken,
+		RefreshToken: tokens.RefreshToken,
+		User: UserDetails{
+			Email: user.Email,
+			ID:    user.ID.String(),
+		},
+	}
+
+	server.SendSuccess(c, "User Created Successfully", response)
+}
+
+type Tokens struct {
+	AccessToken  string
+	RefreshToken string
+}
+
+func (h *Handler) generateTokens(userID string) (Tokens, error) {
+	accessToken, err := utils.CreateJWT(userID, false, h.srv.Config)
+	if err != nil {
+		return Tokens{}, err
+	}
+
+	refreshToken, err := utils.CreateJWT(userID, true, h.srv.Config)
+	if err != nil {
+		return Tokens{}, err
+	}
+
+	return Tokens{
+		AccessToken:  accessToken,
+		RefreshToken: refreshToken,
+	}, nil
 }
