# docs/swagger.json
@@ -31,7 +31,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/core_handlers_auth.AuthRequest"
+                            "$ref": "#/definitions/github_com_adeyemialameen04_unwind-be_internal_db_repository.RegisterUserParams"
                         }
                     }
                 ],
@@ -59,7 +59,7 @@
         },
         "/auth/signup": {
             "post": {
-                "description": "Logs a user into his/her account",
+                "description": "Create an account on unwind",
                 "consumes": [
                     "application/json"
                 ],
@@ -69,10 +69,10 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Login to your account",
+                "summary": "Create an account",
                 "parameters": [
                     {
-                        "description": "Login data",
+                        "description": "Signup data",
                         "name": "book",
                         "in": "body",
                         "required": true,
@@ -82,6 +82,24 @@
                     }
                 ],
                 "responses": {
+                    "201": {
+                        "description": "User created successfully",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/github_com_adeyemialameen04_unwind-be_core_server.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/core_handlers_auth.RegisterResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
                     "400": {
                         "description": "Invalid request data",
                         "schema": {
@@ -205,17 +223,27 @@
         }
     },
     "definitions": {
-        "core_handlers_auth.AuthRequest": {
+        "core_handlers_auth.RegisterResponse": {
             "type": "object",
-            "required": [
-                "email",
-                "password"
-            ],
+            "properties": {
+                "accessToken": {
+                    "type": "string"
+                },
+                "refreshToken": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/core_handlers_auth.UserDetails"
+                }
+            }
+        },
+        "core_handlers_auth.UserDetails": {
+            "type": "object",
             "properties": {
                 "email": {
                     "type": "string"
                 },
-                "password": {
+                "id": {
                     "type": "string"
                 }
             }
@@ -243,7 +271,7 @@
                 "author": {
                     "type": "string"
                 },
-                "created_at": {
+                "createdAt": {
                     "type": "string"
                 },
                 "id": {
@@ -252,7 +280,7 @@
                 "title": {
                     "type": "string"
                 },
-                "updated_at": {
+                "updatedAt": {
                     "type": "string"
                 }
             }
@@ -274,11 +302,15 @@
         },
         "github_com_adeyemialameen04_unwind-be_internal_db_repository.RegisterUserParams": {
             "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
             "properties": {
                 "email": {
                     "type": "string"
                 },
-                "password_hash": {
+                "password": {
                     "type": "string"
                 }
             }
